# tauri-plugin-media-parser

./: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json
.cargo/: config.toml
crates/media-parser/: Cargo.toml  README.md
crates/media-parser/src/: errors.rs  lib.rs  stream.rs  types.rs
crates/media-parser/src/format/: mod.rs  registry.rs  signatures.rs
crates/media-parser/src/format/mp3/: duration.rs  frame.rs  metadata.rs  mod.rs  tables.rs  tags.rs
crates/media-parser/src/format/mp4/: metadata.rs  mod.rs  subtitles.rs  thumbnails.rs  tracks.rs
crates/media-parser/src/format/mp4/atoms/: iter.rs  media.rs  mod.rs  moov.rs  nav.rs  read.rs  tags.rs  types.rs
crates/media-parser/src/helpers/: bytes.rs  mod.rs  text.rs
crates/media-parser/tests/: mp3_metadata.rs  mp4_metadata.rs
crates/media-parser/tests/fixtures/: sample_metadata.mov
guest-js/: index.ts  tsconfig.json  types.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: get_tracks.toml
permissions/schemas/: schema.json
src/: commands.rs  error.rs  lib.rs
