[package]
name = "media-parser"
version = "0.1.0"
description = "Async MP4 parser utilities: metadata, tracks, frames, and subtitles over seekable file/HTTP streams."
edition = "2024"
rust-version = "1.89.0"

[dependencies]
thiserror = "2.0.16"
async-trait = "0.1.89"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["stream"] }
bytes = "1.5"
futures = "0.3"

[dev-dependencies]
tempfile = "3.8"
wiremock = "0.5"
