[package]
name = "media-parser"
version = "0.1.0"
description = "Async media parser utilities: metadata, tracks, frames, and subtitles over seekable file/HTTP streams."
edition = "2024"
rust-version = "1.89.0"

[dependencies]
thiserror = "2.0.16"
async-trait = "0.1.89"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
reqwest = { version = "0.13.2", features = ["stream"] }
bytes = "1.10.1"
futures = "0.3.31"
log = "0.4.33"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
tempfile = "3.26.0"
wiremock = "0.6.5"
